@@ -1,0 +1,5 @@
+$NetBSD: distinfo,v 1.1.1.1 2007/06/10 23:24:05 abs Exp $
+
+SHA1 (Template-Stash-EscapeHTML-0.01.tar.gz) = 0a539f1e84c1a98bf74420a8a3a57b4eb9694e5a
+RMD160 (Template-Stash-EscapeHTML-0.01.tar.gz) = 5e68d9988b0c2e051867707722e58a36b23ddfe4
+Size (Template-Stash-EscapeHTML-0.01.tar.gz) = 2611 bytes
